# Logos

./: .coveragerc  .gitignore  CANON_API_REFERENCE.md  FORMAL_LANGUAGE_SPEC.md  LICENSE  PILGRIMS_PATH.md  README.md  TESTING_ARCHITECTURE.md  creed.lg  expr_test.lg  logos.py  main.lg  pyproject.toml  sacraments.lg  test.py
.specify/memory/: constitution.md
.specify/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
examples/: absolution.lg  alloc_test.lg  confession.lg  confession_typed_demo.lg  ffi_test.lg  ffi_typed_test.lg  foreign_cos_demo.lg  genesis_demo.lg  hesychasm.lg  iconography.lg  kairos.lg  liturgy.lg  math_test.lbc  math_test.lg  minor_orders.lg  module_a.lg  module_main.lg  script.lg  scriptorium.lg  smoke_test.lg  sobornost.lg  transfiguration_test.lg
lib/: canon.lg  genesis.lg  numeri.lg  psalms.lg
logos/: README.md  __init__.py  absolution.lbc  alloc_test.lbc  compiler.py  confession.lbc  confessor.py  diakrisis.py  disassembler.py  foreign_cos_demo.lbc  foreign_cos_demo.lbc.src.lg  foreign_cos_demo.lbc.sym  genesis_demo.lbc  genesis_demo.lg  genesis_demo_test.lbc.src.lg  genesis_demo_test.lbc.sym  hesychasm.lbc  hesychasm.lg  iconography.lbc  iconography.lg  kairos.lbc  kairos.lg  liturgy.lbc  liturgy.lg  logos.lark  metanoia.py  minor_orders.lbc  minor_orders.lg  module_a.lbc  module_a.lg  module_main.lbc  module_main.lg  ontology.py  repl.py  script.lbc  script.lg  scriptorium.lbc  scriptorium.lg  sobornost.lbc  sobornost.lg  (+3 more)
logos-liturgy/: package.json
logos-svm/: Cargo.toml  README.md
logos-svm/src/: ffi.rs  main.rs  memory.rs
logos-vscode/: .vscodeignore  README.md  logos-lang-1.0.0.vsix  package-lock.json  package.json
logos-vscode/server/: build_server_win.ps1  logos.lark  lsp_server.py  requirements.txt
logos-vscode/src/: extension.ts
logos-vscode/syntaxes/: logos.tmLanguage.json
logos/tests/: README.md  test_foreign_ffi_encoding.py
logos_lang/: __init__.py  bytecode.py  exceptions.py  ffi.py  grammar.py  interfaces.py  interpreter.py  models.py  modules.py  scope.py  static_analysis.py  stdlib.py  types.py  wasi.py
programs/: main.lg  monk.lg
tests/: canon_runner.py  tco_test.lg  test_canon.py  test_conformance_spectest.py  test_entrypoint_coverage.py  test_ffi_resilience.py  test_lsp.py  test_lsp_jsonrpc.py  test_runtime_internals.py  test_security.py  test_vm_and_type_elision.py  type_enforcement_test.lg
tests/fixtures/: alias_math_a.lg  (+38 more)
(+15 files in other folders)
